# elogger

./: CMakeLists.txt  LICENSE  README.md
include/public/: elogger.hpp
src/elogger/: CMakeLists.txt  LogLevelToString.cpp  LogPacket.cpp
src/elogger/Sinks/: CMakeLists.txt  ConsoleSink.cpp  FileSink.cpp
src/elogger/Sinks/Configurations/: CMakeLists.txt  ConsoleSinkConfigurations.cpp  FileSinkConfiguration.cpp  SinkConfiguration.cpp
src/elogger/Sinks/Utilities/: CMakeLists.txt  GetDateTime.cpp
